# courtsideonsol

./: .gitignore  README.md  audit-markets.ts  cranker_log.txt  debug-key.ts  debug-markets.js  debug_mapping.js  debug_nba_broad.js  debug_production.js  debug_tags.js  deploy-to-mainnet.sh  diagnose.ts  espn_data.txt  espn_output.txt  fetch-espn.ts  fetch-poly.ts  fetch_idl.js  full_lint.txt  init-frontend.bat  list-markets.ts  market_audit.txt  nfl_search.json  nfl_series_debug.json  nfl_series_utf8.json  no_tag_debug.json  output.txt  package-lock.json  package.json  sports_check.json  verify-odds-accuracy.js
app/: globals.css  layout.tsx  page.tsx
app/api/markets/: route.ts
app/components/: Polyfill.tsx  SolanaProvider.tsx
app/hooks/: useBetting.ts  useLiveScores.ts
app/idl/: sports_prediction.json
backend/: Anchor.toml  deploy-mainnet.ps1  deploy.ps1  wsl-setup.sh
backend/programs/sports_prediction/: Cargo.toml
backend/programs/sports_prediction/src/: lib.rs
backend/scripts/: oracle_worker.ts
backend/tests/: sports_prediction.ts
frontend/: broad_debug.json  calc_disc.js  debug-api.js  debug-poly.js  debug_nba.js  debug_production.js  events_debug.json  full_lint_report.txt  full_lint_report_utf8.txt  full_lint_utf8.txt  inspect-odds.js  lint_output.txt  nfl_current.json  nfl_raw.json  package-lock.json  package.json  polymarket_raw.json  sports_list.json  sports_list_fixed.json  tsconfig.scripts.json
frontend/app/: layout.tsx  page.tsx
frontend/app/components/: SolanaProvider.tsx
frontend/scripts/: cranker.ts
scripts/: cranker.ts
(+4 files in other folders)
