[package]
name = "sports_prediction"
version = "0.1.0"
description = "Solana sports prediction market program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sports_prediction"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
